feat: Modify getUsersWithoutAdminRole return type to using dto